# Chess-AI

./: AIMove.cpp  AIMove.h  CMakeLists.txt  GameState.cpp  GameState.h  README.md  castlingRights.h  move.cpp  move.h  refernce.cpp  run.txt  window  window.cpp  window_1.cpp  windows-toolchain.cmake
includes/: AIMove.h  GameState.h  move.h
src/: AIMove.cpp  GameState.cpp  castlingRights.cpp  move.cpp  window  window.cpp
tests/: AIMoveTest.cpp  GameStateTest.cpp
